--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^1.0.7",
+    "@supabase/supabase-js": "^2.90.1",
+    "dotenv": "^17.2.3",
     "react": "^19.2.3",
-    "@google/genai": "^1.36.0",
     "react-dom": "^19.2.3",
+    "react-helmet-async": "^2.0.5",
+    "react-is": "^19.2.3",
     "react-router-dom": "^7.12.0",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
