--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 VITE_SUPABASE_URL=https://tu-proyecto.supabase.co
 VITE_SUPABASE_ANON_KEY=tu-anon-key-aqui
+
+# Encryption key for crypto-js (32+ characters recommended)
+VITE_ENCRYPTION_KEY=your-secure-encryption-key-here-min-32-chars
