--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "start": "node server.js",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "manage-users": "node scripts/admin_user_manager.js"
   },
   "dependencies": {
     "@mercadopago/sdk-react": "^1.0.7",
